--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@elastic/elasticsearch": "^8.2.1",
     "express": "^4.18.1",
-    "nodemon": "^2.0.16"
+    "nodemon": "^1.3.3",
+    "properties-reader": "^2.2.0"
   }
 }
