--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
     "json-builder": "^0.0.2",
+    "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.16",
     "underscore": "^1.13.4",
     "uuid": "^8.3.2"
