--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "license": "ISC",
   "dependencies": {
     "@elastic/elasticsearch": "^8.2.1",
-    "properties-reader": "^2.2.0",
     "bcrypt": "^5.0.1",
     "cloudinary": "^1.30.1",
     "elasticsearch": "^16.7.3",
@@ -19,7 +18,9 @@
     "express-fileupload": "^1.4.0",
     "json-builder": "^0.0.2",
     "nodemon": "^2.0.16",
+    "properties-reader": "^2.2.0",
     "underscore": "^1.13.4",
+    "undici": "^5.9.1",
     "uuid": "^8.3.2"
   }
 }
