--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@elastic/elasticsearch": "^8.4.0",
     "bcrypt": "^5.0.1",
     "cloudinary": "^1.30.1",
+    "compression": "^1.7.4",
     "elasticsearch": "^16.7.3",
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
     "json-builder": "^0.0.2",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.16",
+    "properties-reader": "^2.2.0",
+    "python": "^0.0.4",
     "underscore": "^1.13.4",
     "uuid": "^8.3.2"
   }
