--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "bcrypt": "^5.0.1",
     "cloudinary": "^1.30.1",
     "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "elasticsearch": "^16.7.3",
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
     "json-builder": "^0.0.2",
-    "morgan": "^1.10.0",
     "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.16",
     "properties-reader": "^2.2.0",
     "python": "^0.0.4",
