--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nodemon": "^2.0.16",
     "properties-reader": "^2.2.0",
     "python": "^0.0.4",
+    "razorpay": "^2.8.4",
     "swagger-jsdoc": "^6.0.0",
     "swagger-ui-express": "^4.6.0",
     "underscore": "^1.13.4",
