--- a/package.json
+++ b/package.json
@@ -18,12 +18,17 @@
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
     "json-builder": "^0.0.2",
-    "morgan": "^1.10.0",
     "jsonwebtoken": "^8.5.1",
-    "nodemon": "^2.0.16",
+    "morgan": "^1.10.0",
     "properties-reader": "^2.2.0",
     "python": "^0.0.4",
+    "swagger-jsdoc": "^6.2.5",
+    "swagger-ui-express": "^4.6.0",
     "underscore": "^1.13.4",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "winston": "^3.8.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
