--- a/app.properties
+++ b/app.properties
@@ -3,4 +3,4 @@ server.port=3000
 #-------------------------ES PROPERTIES------------------------------------
 es.server=https://localhost:9200
 es.username=elastic
-es.password= 8DJiecXAd+s=WaDGNF=E
+es.password= N=D14f7buQbu74p*iq3+
