--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "kafka-node": "^5.0.0",
     "moment": "^2.29.4",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.1",
     "nodemon": "^2.0.16",
     "properties-reader": "^2.2.0",
     "python": "^0.0.4",
