--- a/app.properties
+++ b/app.properties
@@ -1,6 +1,6 @@
 server.port=3000
 
 #-------------------------ES PROPERTIES------------------------------------
-es.server=http://localhost:9200
+es.server=https://localhost:9200
 es.username=elastic
-es.password= j*+44bej_O0ZsUlUxFH5
+es.password= N=D14f7buQbu74p*iq3+
