--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "elasticsearch": "^16.7.3",
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
+    "fs": "^0.0.1-security",
     "json-builder": "^0.0.2",
     "jsonwebtoken": "^8.5.1",
     "kafka-node": "^5.0.0",
     "moment": "^2.29.4",
     "morgan": "^1.10.0",
+    "mustache": "^4.2.0",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.16",
     "properties-reader": "^2.2.0",
