--- a/app.properties
+++ b/app.properties
@@ -1,6 +1,6 @@
 server.port=3000
 
 #-------------------------ES PROPERTIES------------------------------------
-es.server=http://localhost:9200
+es.server=https://topdoc.es.ap-south-1.aws.elastic-cloud.com
 es.username=elastic
-es.password=8DJiecXAd+s=WaDGNF=E
+es.password=akTRZuBfO11povBnaDFjSNxU
