--- a/app.properties
+++ b/app.properties
@@ -1,6 +1,6 @@
 server.port=3000
 
 #-------------------------ES PROPERTIES------------------------------------
-es.server=https://topdoc-testing.es.ap-south-1.aws.elastic-cloud.com
+es.server=https://my-deployment-4c163c.es.ap-south-1.aws.elastic-cloud.com
 es.username=elastic
-es.password=5w9JA7EuCEbLw2Ihw1hV11IF
+es.password=NUk2M68CP5cJrG9EF2xCFgak
